# xDAN-smartDoc-dolphin

./: PROJECT_STRUCTURE.md  QUICK_START.md  README.md  README_ARCHITECTURE.md  README_SIMPLE.md  README_xDAN_Vision.md  chat.py  check_dependencies.py  demo_page.py  demo_page_hf.py  example_api_calls.py  fix_dependencies.py  fix_dependencies.sh  fix_timm_transformers_compatibility.py  install_missing_deps.sh  pyproject.toml  requirements.txt  start_server.py  start_xdan_vision_server.py  timm_compatibility_patch.py
config/: Dolphin.yaml
docs/: API_USAGE_GUIDE.md  CONVERSION_SUMMARY.md  DEPLOYMENT_GUIDE.md  VISION_ANALYSIS.md
scripts/: setup.sh  setup_simple.sh
src/: __init__.py
src/api/: __init__.py  enhanced_main.py  main.py
src/api/routers/: __init__.py  document.py  health.py  model.py  system.py  tasks.py
src/core/: __init__.py  config.py  logging.py  models.py
src/engines/: __init__.py  async_dolphin.py
src/queue/: simple_queue.py
src/utils/: __init__.py  file_utils.py  image_utils.py  parsing_utils.py
src/web/: index.html
tests/: test_client.py  test_enhanced_client.py
utils/: model.py
